gitops/platform-config/flux-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux
  namespace: flux-system
spec:
  parentRefs:
    - name: gw-int
      namespace: platform-system
  hostnames:
    - "flux.int.${domain}"
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
